[gd_scene load_steps=21 format=3 uid="uid://bveel111ki6vx"]

[ext_resource type="Script" path="res://Scripts/FrontendSystem/SceneControllers/BillScene/BillPage.gd" id="1_8gm8u"]
[ext_resource type="StyleBox" uid="uid://bmiyiifwuopq0" path="res://Assets/Styles/账簿表顶背景.tres" id="1_v8mb4"]
[ext_resource type="StyleBox" uid="uid://dni7wv6qwaq75" path="res://Assets/Styles/账簿 过滤按钮 正常.tres" id="2_ash36"]
[ext_resource type="StyleBox" uid="uid://cvf5rcj7h3bxu" path="res://Assets/Styles/账簿 过滤按钮 悬停.tres" id="3_3h0xl"]
[ext_resource type="StyleBox" uid="uid://ckv2tqif5l1d0" path="res://Assets/Styles/账簿 过滤按钮 按下.tres" id="4_hrhbh"]
[ext_resource type="Texture2D" uid="uid://h50kqmb1xjjl" path="res://Assets/Pictures/左箭头.png" id="5_o75xr"]
[ext_resource type="Script" path="res://Scripts/CustomNodes/Table.gd" id="6_5lq8q"]
[ext_resource type="Texture2D" uid="uid://bs6p3w8ss651c" path="res://Assets/Pictures/右箭头.png" id="6_6a8vg"]
[ext_resource type="StyleBox" uid="uid://nm8xh4h66c2w" path="res://Assets/Styles/账簿侧边栏添加新账按钮样式.tres" id="7_02uwb"]
[ext_resource type="StyleBox" uid="uid://c6aw87qs2id1m" path="res://Assets/Styles/账簿侧边栏账单按钮 正常.tres" id="8_5d1n8"]
[ext_resource type="StyleBox" uid="uid://sh8qw5v36kys" path="res://Assets/Styles/账簿侧边栏账单按钮 按下.tres" id="8_ry2qa"]
[ext_resource type="StyleBox" uid="uid://40c6vkt03vm8" path="res://Assets/Styles/账簿侧边栏账单按钮 悬停.tres" id="9_6uxcl"]
[ext_resource type="ButtonGroup" uid="uid://btv28die2yust" path="res://Assets/ButtonGroup/账簿选择按钮组合.tres" id="9_xgs8n"]
[ext_resource type="Texture2D" uid="uid://dr0wmfnh4arya" path="res://Assets/Pictures/总账.png" id="10_c153q"]
[ext_resource type="Script" path="res://Scripts/FrontendSystem/SceneControllers/BillScene/FilterWindow.gd" id="14_8hck5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3rxe"]
bg_color = Color(0.843137, 0.843137, 0.843137, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_78l64"]
bg_color = Color(0.803922, 0.803922, 0.803922, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.498039, 0.498039, 0.498039, 1)
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rvex0"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.458824, 0.458824, 0.458824, 1)
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u8oi1"]
bg_color = Color(0.780392, 0.764706, 0.752941, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.513726, 0.513726, 0.513726, 1)
corner_radius_bottom_right = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2n4vm"]
bg_color = Color(0.152941, 0.152941, 0.152941, 0.792157)

[node name="账簿" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 240.0
offset_top = 130.0
offset_right = 1540.0
offset_bottom = 830.0
script = ExtResource("1_8gm8u")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i3rxe")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="TitleBackground" type="Panel" parent="Panel/VBoxContainer"]
show_behind_parent = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2
theme_override_styles/panel = ExtResource("1_v8mb4")

[node name="Title" type="HBoxContainer" parent="Panel/VBoxContainer/TitleBackground"]
layout_mode = 2
offset_top = 4.0
offset_right = 1300.0
offset_bottom = 66.0
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="FilterButton" type="Button" parent="Panel/VBoxContainer/TitleBackground/Title"]
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
theme_override_colors/font_color = Color(0, 0.184314, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 1, 1)
theme_override_styles/normal = ExtResource("2_ash36")
theme_override_styles/hover = ExtResource("3_3h0xl")
theme_override_styles/pressed = ExtResource("4_hrhbh")
text = "过滤"

[node name="BillName" type="Label" parent="Panel/VBoxContainer/TitleBackground/Title"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 9.0
theme_override_colors/font_color = Color(0.0352941, 0.0352941, 0.0352941, 1)
theme_override_font_sizes/font_size = 36
text = "账单名"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Content" type="HBoxContainer" parent="Panel/VBoxContainer"]
show_behind_parent = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
theme_override_constants/separation = 8

[node name="MainContentBackground" type="Panel" parent="Panel/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 7.0
theme_override_styles/panel = SubResource("StyleBoxFlat_78l64")

[node name="MainContentUpDownSplit" type="VBoxContainer" parent="Panel/VBoxContainer/Content/MainContentBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 7.0
theme_override_constants/separation = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/Content/MainContentBackground/MainContentUpDownSplit"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="GridContainer" type="Control" parent="Panel/VBoxContainer/Content/MainContentBackground/MainContentUpDownSplit/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("6_5lq8q")

[node name="Button" type="Button" parent="Panel/VBoxContainer/Content/MainContentBackground/MainContentUpDownSplit/ScrollContainer/GridContainer"]
layout_mode = 2
offset_left = 534.0
offset_top = 554.0
offset_right = 596.0
offset_bottom = 585.0
size_flags_horizontal = 6
size_flags_vertical = 10
text = "Button"

[node name="MainContentDetailInfo" type="Panel" parent="Panel/VBoxContainer/Content/MainContentBackground/MainContentUpDownSplit"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_rvex0")

[node name="HorizontalSplitContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Content/MainContentBackground/MainContentUpDownSplit/MainContentDetailInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EntrySum" type="Label" parent="Panel/VBoxContainer/Content/MainContentBackground/MainContentUpDownSplit/MainContentDetailInfo/HorizontalSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "     本页共   条记录， 总共   条记录"

[node name="Income" type="Label" parent="Panel/VBoxContainer/Content/MainContentBackground/MainContentUpDownSplit/MainContentDetailInfo/HorizontalSplitContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 2.3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "收入：        元"
horizontal_alignment = 1

[node name="Spend" type="Label" parent="Panel/VBoxContainer/Content/MainContentBackground/MainContentUpDownSplit/MainContentDetailInfo/HorizontalSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "支出：        元"
horizontal_alignment = 1

[node name="Recorded" type="Label" parent="Panel/VBoxContainer/Content/MainContentBackground/MainContentUpDownSplit/MainContentDetailInfo/HorizontalSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "入账：        元"

[node name="PageSwitch" type="HBoxContainer" parent="Panel/VBoxContainer/Content/MainContentBackground/MainContentUpDownSplit/MainContentDetailInfo/HorizontalSplitContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 1.35

[node name="LastPage" type="Button" parent="Panel/VBoxContainer/Content/MainContentBackground/MainContentUpDownSplit/MainContentDetailInfo/HorizontalSplitContainer/PageSwitch"]
layout_mode = 2
focus_mode = 0
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
icon = ExtResource("5_o75xr")
flat = true

[node name="InputPage" type="LineEdit" parent="Panel/VBoxContainer/Content/MainContentBackground/MainContentUpDownSplit/MainContentDetailInfo/HorizontalSplitContainer/PageSwitch"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "1"
alignment = 1

[node name="TotalPage" type="Label" parent="Panel/VBoxContainer/Content/MainContentBackground/MainContentUpDownSplit/MainContentDetailInfo/HorizontalSplitContainer/PageSwitch"]
layout_mode = 2
theme_override_colors/font_color = Color(0.196078, 0.196078, 0.196078, 1)
theme_override_font_sizes/font_size = 22
text = " / 1"

[node name="NextPage" type="Button" parent="Panel/VBoxContainer/Content/MainContentBackground/MainContentUpDownSplit/MainContentDetailInfo/HorizontalSplitContainer/PageSwitch"]
layout_mode = 2
focus_mode = 0
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
icon = ExtResource("6_6a8vg")
flat = true

[node name="SideBackground" type="Panel" parent="Panel/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_u8oi1")

[node name="SideContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Content/SideBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AddNewBill" type="Button" parent="Panel/VBoxContainer/Content/SideBackground/SideContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.364706, 0.364706, 0.364706, 1)
theme_override_colors/font_hover_color = Color(0.211765, 0.211765, 0.211765, 1)
theme_override_styles/normal = ExtResource("7_02uwb")
theme_override_styles/hover = ExtResource("7_02uwb")
theme_override_styles/pressed = ExtResource("7_02uwb")
text = "添加新账"

[node name="TotalBill" type="Button" parent="Panel/VBoxContainer/Content/SideBackground/SideContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("8_5d1n8")
theme_override_styles/hover = ExtResource("9_6uxcl")
theme_override_styles/pressed = ExtResource("8_ry2qa")
toggle_mode = true
button_group = ExtResource("9_xgs8n")
text = "总账"
icon = ExtResource("10_c153q")
alignment = 0

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 110.0
offset_top = 5.0
offset_right = 250.0
offset_bottom = 635.0
script = ExtResource("14_8hck5")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "过滤内容"
horizontal_alignment = 1

[node name="ContentScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2n4vm")

[node name="ContentContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ContentScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Submit" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "确定"

[node name="Cancel" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "取消"

[connection signal="pressed" from="Panel/VBoxContainer/TitleBackground/Title/FilterButton" to="PanelContainer" method="OpenFilterWindow"]
[connection signal="pressed" from="Panel/VBoxContainer/Content/MainContentBackground/MainContentUpDownSplit/ScrollContainer/GridContainer/Button" to="Panel/VBoxContainer/Content/MainContentBackground/MainContentUpDownSplit/ScrollContainer/GridContainer" method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonContainer/Submit" to="PanelContainer" method="SubmitFilter"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonContainer/Cancel" to="PanelContainer" method="CancelFilter"]
